Kubernetes/Deployment/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: lbt-lbt-api
        resources:
          limits:
            cpu: "100m"
            memory: "400Mi"
        imagePullPolicy: Never
        ports:
        - containerPort: 2970
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: api
