Kubernetes/Deployment/psql-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-db-deployment
  labels:
    app: psql-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: psql-db
  template:
    metadata:
      labels:
        app: psql-db
        dude: "true"
    spec:
      containers:
      - name: psql-db
        image: lbt-lbt-psql
        resources:
          limits:
            cpu: "100m"
            memory: "400Mi"
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
          name: psql-db
---
apiVersion: v1
kind: Service
metadata:
  name: psql-db-service
spec:
  type: NodePort
  selector:
    app: psql-db
  ports:
  - port: 5600
    targetPort: psql-db
    nodePort: 30000
