Kubernetes/Deployment/aws-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-db-deployment
  labels:
    app: psql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-db
  template:
    metadata:
      labels:
        app: psql-db
        dude: "true"
    spec:
      containers:
      - name: psql-db
        image: 579185636331.dkr.ecr.eu-central-1.amazonaws.com/lbt-container-registry:lbt-psql
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 5432
          name: psql-db
---
apiVersion: v1
kind: Service
metadata:
  name: psql-db-service
spec:
  type: NodePort
  selector:
    app: psql-db
  ports:
  - port: 5600
    targetPort: psql-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: 579185636331.dkr.ecr.eu-central-1.amazonaws.com/lbt-container-registry:lbt-api
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 2970
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - protocol: TCP
    port: 2970
    targetPort: api
  selector:
    app: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbt-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port: 
              number: 2970
